--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -32,10 +32,14 @@
         color: #dd4b39 !important;
     }
 
+    .has-error .select2-selection {
+        border: 1px solid #a94442;
+        border-radius: 4px;
+    }
+
     th.dt-center {
         text-align: center;
     }
-
 
     .alert-info {
         background-color: rgba(119, 131, 235, 0.945);
