--- a/view/node/detailberkas.html
+++ b/view/node/detailberkas.html
@@ -231,7 +231,7 @@
                 required: 'Desa wajib diisi.',
             },
             statusRegister: {
-                required: 'Status wajib diisi.',
+                required: 'Status register wajib diisi.',
             },
             phoneBerkas: {
                 required: 'Nomor telp pemohon wajib diisi.'
