--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -137,7 +137,7 @@
             <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
             <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
             <!-- Table Pegawai -->
-            <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
+            <table id="tablePegawai" class="table table-striped table-bordered" style="width:100%">
                 <thead>
                     <tr>
                         <th>ID</th>
@@ -158,7 +158,7 @@
 </section>
 
 
-<div class="modal fade" data-remote="false" id="modal-activation" data-backdrop="false" id="activedModal">
+<div class="modal fade" data-remote="false" id="modal-activation" data-backdrop="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header" style="text-align:left;">
@@ -192,7 +192,7 @@
     </div>
 </div>
 
-<div class="modal fade" data-remote="false" id="modal-role" data-backdrop="false" id="activedModal">
+<div class="modal fade" data-remote="false" id="modal-role" data-backdrop="false">
     <div class="modal-dialog" id="userRole">
     </div>
 </div>
