--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -71,7 +71,6 @@
             <h3 class="box-title">Pencarian Register</h3>
         </div>
 
-
         <div class="form-horizontal" id="formFilterBerkas" method="POST">
             {% module xsrf_form_html() %}
             <div class="box-body">
@@ -87,7 +86,7 @@
                         <div class="input-group input-group-md">
                             <input type="text" class="form-control" id="tahunBerkas" name="tahunBerkas">
                             <span class="input-group-btn">
-                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
+                                <button id="btnFilterBerkas" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
                             </span>
                         </div>
                     </div>
@@ -95,20 +94,23 @@
             </div>
             <!-- /.box-body -->
         </div>
-
     </div>
 
     <div class="box box-solid">
         <div class="box-body">
-            <!-- Table Berkas -->
-            <table id="tableBerkas" class="table table-striped table-bordered responsive" style="width:100%">
+            <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
+            <!-- Table Register Berkas -->
+            <table id="tableBerkas" class="table table-striped table-bordered" style="width:100%">
                 <thead>
                     <tr>
                         <th>ID</th>
                         <th>No</th>
                         <th>Nomor Berkas</th>
                         <th>Tahun Berkas</th>
-                        <th>Start Date</th>
+                        <th>Tanggal Kirim</th>
+                        <th>Kegiatan</th>
+                        <th>Posisi Register</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody style="cursor: pointer;">
@@ -118,4 +120,9 @@
         </div>
     </div>
 </section>
+
+<div class="modal fade" data-remote="false" id="modal-messange" data-backdrop="false">
+    <div class="modal-dialog" id="messange-dialog">
+    </div>
+</div>
 {% end %}
