--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -108,6 +108,7 @@
                         <th>Nomor Berkas</th>
                         <th>Tahun Berkas</th>
                         <th>Tanggal Kirim</th>
+                        <th>Pengirim</th>
                         <th>Kegiatan</th>
                         <th>Posisi Register</th>
                         <th></th>
