--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -82,12 +82,6 @@
         </div>
     </div>
     <div class="form-group">
-        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="keterangan">Keterangan:</label>
-        <div class="col-md-9 col-sm-9 col-xs-12">
-            <textarea name="keterangan" id="keterangan" class="form-control" cols="10" rows="5"></textarea>
-        </div>
-    </div>
-    <div class="form-group">
         <label class="control-label col-md-2 col-sm-2 col-xs-12">Simponi:</label>
         <div class="col-md-9 col-sm-9 col-xs-12">
             <div class="table-responsive">
@@ -274,8 +268,7 @@
                     desaid: $('#desaBerkas').select2().val(),
                     status: $('#statusRegister').select2().val(),
                     phone: $('#phoneBerkas').val(),
-                    email: $('#emailBerkas').val(),
-                    keterangan: $('textarea:input[name=keterangan]').val(),
+                    email: $('#emailBerkas').val()
                 }),
                 async: true,
                 headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
