--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -25,6 +25,7 @@
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+<script src="{{ static_url('vendor/jQuery.print/jQuery.print.js')  }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
 <script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
@@ -104,65 +105,79 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-cog"></i> Inbox</li>
+        <li><i class="fa fa-cog"></i> Register Berkas</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
 
 <section class="content">
-    <div class="box box-solid">
-        <div class="box-header with-border text-center">
-            <h3 class="box-title">Pencarian Berkas</h3>
-        </div>
-
-        <div class="form-horizontal" id="formFindBerkas" method="POST">
-            {% module xsrf_form_html() %}
-            <div class="box-body">
-                <div class="form-group">
-                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="nomorBerkas">Nomor Berkas:</label>
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <input type="text" class="form-control" id="nomorBerkas" name="nomorBerkas">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="tahunBerkas">Tahun Berkas:</label>
-                    <div class="col-md-4 col-sm-4 col-xs-12">
-                        <div class="input-group input-group-md">
-                            <input type="text" class="form-control" id="tahunBerkas" name="tahunBerkas">
-                            <span class="input-group-btn">
-                                <button id="btnFindBerkas" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
-                            </span>
+    <div class="nav-tabs-custom">
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#tabPencarian" data-toggle="tab" aria-expanded="true">Pencarian</a></li>
+            <li class=""><a href="#tabDetail" data-toggle="tab" aria-expanded="false">Detail</a></li>
+        </ul>
+    
+        <div class="tab-content">
+            <div class="tab-pane active" id="tabPencarian">
+                <div class="form-horizontal" id="formFindBerkas" method="POST">
+                    {% module xsrf_form_html() %}
+                    <div class="box-body">
+                        <div class="form-group">
+                            <label class="control-label col-md-4 col-sm-4 col-xs-12" for="nomorBerkas">Nomor Berkas:</label>
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <input type="text" class="form-control" id="nomorBerkas" name="nomorBerkas">
+                            </div>
                         </div>
+                        <div class="form-group">
+                            <label class="control-label col-md-4 col-sm-4 col-xs-12" for="tahunBerkas">Tahun Berkas:</label>
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <div class="input-group input-group-md">
+                                    <input type="text" class="form-control" id="tahunBerkas" name="tahunBerkas">
+                                    <span class="input-group-btn">
+                                        <button id="btnFindBerkas" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> Cari Berkas</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                </div>
+    
+                <div class="box box-solid">
+                    <div class="box-body">
+                        <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
+                        <!-- Table Register Berkas -->
+                        <table id="tableBerkas" class="table table-striped table-bordered" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th>ID</th>
+                                    <th>No</th>
+                                    <th>Nomor Berkas</th>
+                                    <th>Tahun Berkas</th>
+                                    <th>Tanggal Kirim</th>
+                                    <th>Pengirim</th>
+                                    <th>Kegiatan</th>
+                                    <th>Posisi Register</th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tbody style="cursor: pointer;">
+                            </tbody>
+                        </table>
+                        <!-- ./Table Pegawai -->
                     </div>
                 </div>
             </div>
-            <!-- /.box-body -->
-        </div>
-    </div>
-
-    <div class="box box-solid">
-        <div class="box-body">
-            <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
-            <!-- Table Register Berkas -->
-            <table id="tableBerkas" class="table table-striped table-bordered" style="width:100%">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>No</th>
-                        <th>Nomor Berkas</th>
-                        <th>Tahun Berkas</th>
-                        <th>Tanggal Kirim</th>
-                        <th>Pengirim</th>
-                        <th>Kegiatan</th>
-                        <th>Posisi Register</th>
-                        <th></th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody style="cursor: pointer;">
-                </tbody>
-            </table>
-            <!-- ./Table Pegawai -->
+            <!-- /.tab-pane -->
+            <div class="tab-pane" id="tabDetail">
+                <div class="error-content">
+                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+    
+                    <p class="text-center">
+                        We could not find the page you were looking for.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
