--- a/view/index.html
+++ b/view/index.html
@@ -89,6 +89,13 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                 </li>
 
+                <!-- ./Compose -->
+                <li class="">
+                    <a href="/register/compose">
+                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>Compose</span>
+                    </a>
+                </li>
+
                 <!-- ./Register Berkas -->
                 <li class="treeview">
                     <a href="#">
@@ -99,10 +106,8 @@ class="hold-transition skin-blue fixed sidebar-mini"
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i> Compose</a></li>
                         <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Inbox</a></li>
                         <li class=""><a href="/register/sent"><i class="fa fa-circle-o"></i> Sent</a></li>
-                        <li class=""><a href="/register/draft"><i class="fa fa-circle-o"></i> Draft</a></li>
                     </ul>
                 </li>
 
