--- a/view/node/detailmessange.html
+++ b/view/node/detailmessange.html
@@ -8,7 +8,7 @@
         <h4 class="modal-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> New Register</h4>
     </div>
     <div class="modal-body">
-        <form class="form-horizontal" id="formSendRegister" method="POST">
+        <form class="form-horizontal" id="formSendMessange" method="POST">
             {% module xsrf_form_html() %}
             <div class="form-group">
                 <label class="control-label col-md-2 col-sm-2 col-xs-12" for="receive">Dikirim:</label>
@@ -16,7 +16,9 @@
                     <select id="receive" name="receive" class="select2 form-control" style="width: 100%;">
                         <option value=""></option>
                         {% for d in users %}
+                            {% if d['_id'] != useractived %}
                             <option value="{{ d['_id'] }}">{{d['nama']}}</option>
+                            {% end %}
                         {% end %}
                     </select>
                 </div>
@@ -42,8 +44,8 @@
 </div>
 
 <script>
-    $('#formSendRegister').validate({
-        messages: {
+    $('#formSendMessange').validate({
+        rules: {
             receive: {
                 required: true,
             }
@@ -125,7 +127,10 @@
         }
     });
 
-
+    $('#receive').on('change', function () {
+        $(this).valid();
+    });
+    
     $("#receive").select2({
         placeholder: "Pilih karyawan",
         theme: "bootstrap",
