--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -132,7 +132,7 @@
     </div>
     <div class="box box-solid">
         <div class="box-header with-border">
-            <h3 class="box-title">Berkas Masuk</h3>
+            <h3 class="box-title">Berkas</h3>
         </div>
         <div class="box-body"  id="berkasView">
             <div class="error-content">
