--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -105,7 +105,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-cog"></i> Register Berkas</li>
+        <li><i class="fa fa-server"></i> Daftar Berkas</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
@@ -157,7 +157,7 @@
                                     <th>Tanggal Kirim</th>
                                     <th>Pengirim</th>
                                     <th>Kegiatan</th>
-                                    <th>Posisi Register</th>
+                                    <th>Prosedur</th>
                                     <th></th>
                                 </tr>
                             </thead>
