--- a/view/index.html
+++ b/view/index.html
@@ -92,7 +92,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <!-- ./Compose -->
                 <li class="">
                     <a href="/register/compose">
-                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>Compose</span>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>Berkas Masuk</span>
                     </a>
                 </li>
 
@@ -100,7 +100,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-server" aria-hidden="true"></i>
-                        <span>Register Berkas</span>
+                        <span>Daftar Berkas</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
