--- a/view/node/detailberkas.html
+++ b/view/node/detailberkas.html
@@ -2,7 +2,7 @@
     <div class="no-print">
         <button class="btn btn-default no-print" id="btnPrintRegister"><i class="fa fa-print"></i> Print</button>
         <button class="btn btn-success no-print" id="btnKembali"><i class="fa fa-undo"></i> Kembali</button>
-        <button class="btn btn-primary no-print pull-right" id="btnNewMessange"><i class="fa fa-envelope-o" aria-hidden="true"></i> Messange</button>
+        <button class="btn btn-primary no-print pull-right" id="btnNewMessange"><i class="fa fa-envelope-o" aria-hidden="true"></i> Kirim Berkas</button>
     </div>
     <br>
     <div class="invoice-info">
@@ -11,23 +11,16 @@
         </h5>
         <div class="row">
             <input type="hidden" name="registerid" id="registerid" value="{{ inbox['_id'] }}">
-            <div class="col-sm-3 invoice-col">
-                <strong>Pengirim :</strong> <address>{{ inbox['sendername'] }}</address>
-                <strong>Tanggal Kirim :</strong> <address>{{ inbox['senddate'].strftime('%d/%m/%Y, %H:%M:%S') }}</address>
-                <strong>Register :</strong> <address>{{ inbox['register'] }}</address>
-            </div>
-            <div class="col-sm-3 invoice-col">
-                <strong>Region :</strong> <address>{{ 'KEC.' + inbox['namakecamatan'] }},{{ '  DS/KEL.' + inbox['namadesa'] }}</address>
+            <div class="col-sm-4 invoice-col">
+                <strong>Pengirim :</strong> <address>{{ inbox['sendername'] }} <br> Tanggal. {{ inbox['senddate'].strftime('%d/%m/%Y, %H:%M:%S') }}</address>
+                <strong>Nomor Register :</strong> <address>{{ inbox['register'] }}</address>
                 <strong>Tanggal Diterima :</strong> <address>{{ inbox['receivedate'].strftime('%d/%m/%Y, %H:%M:%S') }}</address>
                 <strong>Pesan :</strong> <address>{{ inbox['messsange'] }}</address>
             </div>
-            <div class="col-sm-3 invoice-col">
-                <strong>Berkas :</strong> <address>{{ info['nomor'] }} / {{ info['tahun'] }}</address> 
+            <div class="col-sm-4 invoice-col">
+                <strong>Nomor Berkas :</strong> <address>{{ info['nomor'] }} / {{ info['tahun'] }}</address> 
                 <strong>Pendaftaran :</strong> <address>{{ datetime.datetime.strptime(info['createdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}  -  Tgl.{% if info['startdate'] != '0001-01-01T00:00:00Z' %}{{ datetime.datetime.strptime(info['startdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }} {% end %}</address>    
-                <strong>Kegiatan :</strong> <address>{{ info['kegiatan'] }}, {{ '  ' + info['prosedur'] }}</address>
-                <strong>Status :</strong> <address>{% if info['status'] == '1' %}PROSES{% elif info['status'] == '0' %}SELESAI, {% if info['finnishdate'] != '0001-01-01T00:00:00Z' %}  Tgl.{{ datetime.datetime.strptime(info['finnishdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}{% end %}{% end %}</address>  
-            </div>
-            <div class="col-sm-3 invoice-col">
+                <strong>Kegiatan :</strong> <address>{{ '  ' + info['prosedur'] }}</address>
                 <strong>Pemohon :</strong> <address>{{ info['pemohon'] }}   {% if pemilik == [] %}
                                                                             An. {{ info['pemohon'] }}
                                                                             {% else %}
@@ -40,9 +33,11 @@
                                                                                     {% end %}
                                                                                 {% end %}
                                                                             {% end %}</address>
-                <strong>Posisi (KKP) :</strong> <address>{{ info['profile'] }} ({{ info['pegawai'] }})</address>
-                <strong>Phone:</strong> <address>{{ inbox['phone'] }}</address>
-                <strong>Email:</strong> <address>{{ inbox['email'] }}</address>
+            </div>
+            <div class="col-sm-4 invoice-col">
+                <strong>Posisi Berkas :</strong> <address>{{ info['profile'] }}</address>
+                <strong>Petugas Terakhir :</strong> <address>{{ info['pegawai'] }}</address>
+                <strong>Status :</strong> <address>{{ info['kegiatan'].upper() }} <br> {% if info['status'] == '1' %} PROSES {% elif info['status'] == '0' %}SELESAI {% if info['finnishdate'] != '0001-01-01T00:00:00Z' %}  Tgl.{{ datetime.datetime.strptime(info['finnishdate'], '%Y-%m-%dT%H:%M:%S%z').strftime('%d/%m/%Y, %H:%M:%S')  }}{% end %}{% end %}</address>  
             </div>
         </div>
         <br>
