--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -4,13 +4,6 @@
     <input type="hidden" name="berkasid" value="{{ info['_id'] }}">
     <div class="invoice">
         <div class="form-group">
-            <div class="col-sm-1"></div>
-            <div class="col-sm-6">
-                <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-primary btn-md btn-flat"><i class="fa fa-floppy-o" aria-hidden="true"></i> Register Berkas</button>
-                <button type="button" id="btnBatal" name="btnBatal" class="btn btn-danger btn-flat"> Batal</button>
-            </div>
-        </div>
-        <div class="form-group">
             <label for="desaBerkas" class="col-sm-1 control-label">Desa:</label>
             <div class="col-sm-6">
                 <select id="desaBerkas" name="desaBerkas" class="select2 form-control" style="width: 100%;">
@@ -40,6 +33,13 @@
                 <input type="text" name="emailBerkas" id="emailBerkas" class="form-control">
             </div>
         </div>
+        <div class="form-group">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-6">
+                <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-primary btn-md btn-flat"><i class="fa fa-floppy-o" aria-hidden="true"></i> Simpan Berkas</button>
+                <button type="button" id="btnBatal" name="btnBatal" class="btn btn-danger btn-flat"> Batal</button>
+            </div>
+        </div>
     </div>
 </form>
 <div class="invoice">
@@ -52,7 +52,7 @@
             </div>
             <div class="col-sm-4 invoice-col">
                 <strong>Kegiatan :</strong> <address>{{ info['prosedur'] }}</address>
-                <strong>Pemohon Berkas :</strong> <address>{{ info['pemohon'] }}  {% if pemilik == [] %}
+                <strong>Pemohon Berkas :</strong> <address>{{ info['pemohon'] }} {% if pemilik == [] %}
                                                                                    An. {{ info['pemohon'] }}
                                                                                   {% else %}
                                                                                       An. 
@@ -63,7 +63,7 @@
                                                                                               {{ p['nama'] }}
                                                                                           {% end %}
                                                                                       {% end %}
-                                                                                  {% end %}" </address>
+                                                                                  {% end %} </address>
                 <strong>Posisi Berkas :</strong> <address>{{ info['profile'] }}</address>
             </div>
             <div class="col-sm-4 invoice-col">
