--- a/view/page/register/sent.html
+++ b/view/page/register/sent.html
@@ -37,7 +37,7 @@
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/register/inbox.js')}}"></script>
+<script src="{{ static_url('js/page/register/sent.js')}}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
@@ -51,6 +51,56 @@
         position: relative;
     }
 
+    .alert-info {
+        background-color: rgba(119, 131, 235, 0.945);
+        /* border-color: rgb(22, 22, 22); */
+        border-radius: 3px;
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
+
+    .alert-info>[data-notify="icon"] {
+        height: 50px;
+        margin-right: 12px;
+    }
+
+    .alert-info>[data-notify="title"] {
+        color: rgb(255, 255, 255);
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        font-size: 130%;
+    }
+
+    .alert-info>[data-notify="message"] {
+        font-size: 115%;
+    }
+
+
+    .alert-minimalist {
+        background-color: rgba(236, 171, 51, 0.945);
+        /* border-color: rgb(22, 22, 22); */
+        border-radius: 3px;
+        color: rgb(255, 255, 255);
+        padding: 10px;
+    }
+
+    .alert-minimalist>[data-notify="icon"] {
+        height: 50px;
+        margin-right: 12px;
+    }
+
+    .alert-minimalist>[data-notify="title"] {
+        color: rgb(255, 255, 255);
+        display: block;
+        font-weight: bold;
+        margin-bottom: 5px;
+        font-size: 130%;
+    }
+
+    .alert-minimalist>[data-notify="message"] {
+        font-size: 115%;
+    }
 </style>
 {% end %}
 
@@ -61,7 +111,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-cog"></i> Register Berkas Terkirim</li>
+        <li><i class="fa fa-server"></i> Daftar Berkas</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
@@ -116,7 +166,7 @@
                                     <th>Tanggal Kirim</th>
                                     <th>Pengirim</th>
                                     <th>Kegiatan</th>
-                                    <th>Posisi Register</th>
+                                    <th>Prosedur</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -140,4 +190,9 @@
         </div>
     </div>
 </section>
+
+<div class="modal fade" data-remote="false" id="modal-messange" data-backdrop="false">
+    <div class="modal-dialog" id="messange-dialog">
+    </div>
+</div>
 {% end %}
