--- a/view/index.html
+++ b/view/index.html
@@ -96,11 +96,25 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                 </li>
 
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-server" aria-hidden="true"></i>
+                        <span>KKP</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="/kkp/daftarberkas"><i class="fa fa-circle-o"></i>Daftar Berkas</a></li>
+                        <li class=""><a href="/kkp/berkasmasuk"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
+                    </ul>
+                </li>
+
                 <!-- ./Register Berkas -->
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-server" aria-hidden="true"></i>
-                        <span>Daftar Berkas</span>
+                        <span>Tunggakan Berkas</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
