--- a/view/index.html
+++ b/view/index.html
@@ -89,24 +89,18 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                 </li>
 
-                <!-- ./Compose -->
-                <li class="">
-                    <a href="/register/compose">
-                        <i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span>Berkas Masuk</span>
-                    </a>
-                </li>
-
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-server" aria-hidden="true"></i>
-                        <span>KKP</span>
+                        <i class="fa fa-random" aria-hidden="true"></i>
+                        <span>Register Masuk</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
                     </a>
                     <ul class="treeview-menu">
+                        <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i>Compose</a></li>
+                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
                         <li class=""><a href="/kkp/daftarberkas"><i class="fa fa-circle-o"></i>Daftar Berkas</a></li>
-                        <li class=""><a href="/kkp/berkasmasuk"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
                     </ul>
                 </li>
 
