--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -5,8 +5,6 @@
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
@@ -23,8 +21,8 @@
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
-<script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose.js') }}"></script>
 <style>
@@ -95,7 +93,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-server"></i> Register</li>
+        <li><i class="fa fa-server"></i> Register Masuk</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
@@ -130,19 +128,7 @@
             </form>
         </div>
     </div>
-    <div class="box box-solid">
-        <div class="box-header with-border">
-            <h3 class="box-title">Berkas</h3>
-        </div>
-        <div class="box-body"  id="berkasView">
-            <div class="error-content">
-                <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
-
-                <p class="text-center">
-                    We could not find the page you were looking for.
-                </p>
-            </div>
-        </div>
+    <div id="berkasView">
     </div>
 </section>
 {% end %}
