--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -4,6 +4,8 @@
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
@@ -20,6 +22,7 @@
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
+<script src="{{ static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
