--- a/view/page/register/compose_list.html
+++ b/view/page/register/compose_list.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.dataTables.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/FixedHeader-3.1.7/css/fixedHeader.bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Buttons-1.5.4/css/buttons.dataTables.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Buttons-1.5.4/css/buttons.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
@@ -19,7 +21,6 @@
 {% block title %}
 {{ escape(handler.settings["title"]) }} | {{ page['title'] }}
 {% end %}
-
 
 <!-- ANCHOR: Module JS inbox.html -->
 {% block js %}
@@ -35,6 +36,9 @@
 <script src="{{ static_url('vendor/Responsive-2.2.2/js/responsive.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/dataTables.fixedHeader.js') }} }}"></script>
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/dataTables.buttons.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.html5.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose_list.js') }}"></script>
@@ -101,6 +105,10 @@
     .alert-minimalist>[data-notify="message"] {
         font-size: 115%;
     }
+
+    button.btn-space {
+        margin-bottom: 5px;
+    }
 </style>
 {% end %}
 
@@ -125,7 +133,7 @@
 
         <div class="tab-content">
             <div class="tab-pane active" id="tabPencarian">
-                <div class="form-horizontal" id="formFindBerkas" method="POST">
+                <form class="form-horizontal" id="formCariBerkas" method="POST">
                     {% module xsrf_form_html() %}
                     <div class="box-body">
                         <div class="form-group">
@@ -147,17 +155,15 @@
                         </div>
                     </div>
                     <!-- /.box-body -->
-                </div>
+                </form>
 
                 <div class="box box-solid">
                     <div class="box-body">
-                        <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
                         <!-- Table Register Berkas -->
                         <table id="tableBerkas" class="table table-striped table-bordered" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th>No</th>
                                     <th>Register</th>
                                     <th>Tanggal Register</th>
                                     <th>Petugas Register</th>
@@ -165,6 +171,7 @@
                                     <th>Tahun Berkas</th>
                                     <th>Kegiatan</th>
                                     <th>Prosedur</th>
+                                    <th>Status</th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -177,12 +184,14 @@
             </div>
             <!-- /.tab-pane -->
             <div class="tab-pane" id="tabDetail">
-                <div class="error-content">
-                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
-
-                    <p class="text-center">
-                        We could not find the page you were looking for.
-                    </p>
+                <div id="berkasView">
+                    <div class="error-content" >
+                        <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+    
+                        <p class="text-center">
+                            We could not find the page you were looking for.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
